--- a/README
+++ b/README
@@ -2,5 +2,35 @@ open(2) / openat(2) wrapper to call posix_fadvise(3) after open
 Copyright (C) 2012 SATOH Fumiyasu @ OSS Technology Corp, Japan
 
 Usage:
-  $ LD_PRELOAD=`pwd`/libopenfadvise.so grep foo /path/to/largefile
+
+  $ LD_PRELOAD=`pwd`/libopenfadvise.so OPENFADVISE_ADVISE=noreuse \
+    grep foo /path/to/largefile
+
+Available values for $OPENFADVISE_ADVISE:
+
+  normal
+      POSIX_FADV_NORMAL: Indicates that the application has no
+      advice to give about its access pattern for the specified
+      data.
+
+  sequential
+      POSIX_FADV_SEQUENTIAL: The application expects to access
+      the specified data sequentially (with lower offsets read
+      before higher ones).
+
+  random
+      POSIX_FADV_RANDOM: The specified data will be accessed
+      in random order.
+
+  noreuse
+      POSIX_FADV_NOREUSE: The specified data will be accessed
+      only once.
+
+  willneed
+      POSIX_FADV_WILLNEED: The specified data will be accessed
+      in the near future.
+
+  dontneed
+      POSIX_FADV_DONTNEED: The specified data will not be
+      accessed in the near future.
 
